# simonjisu.github.io

./: .gitignore  404.html  Allura-OFL.txt  Gemfile  README.md  SUMMARY.md  _config-local.yml  _config.yml  _config_dev.yml  about.md  about.txt  archive.html  astro.config.mjs  blog.html  build-book.sh  github.txt  index.html  mkdocs.insiders.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  tags.json  test-update.md
_gitbook/: index.html
_includes/: author.html  buymecoffee.html  collaspe-block.html  dq.html  footer.html  ga.html  google_ad.html  google_ad_head.html  google_ad_side.html  google_tagmanager.html  head.html  header.html  image.html  latex.html  prevnext.html  test.html  text-expand.html  toc_block.html  tothetop.html
_layouts/: archive.html  default.html  page.html  post.html
_posts/: 2011-06-19-welcome-to-jekyll.markdown  2016-05-20-my-example-post.md  2017-07-21-Test.markdown  2017-08-04-E2EMN.markdown  2017-08-14-PYCON2017.markdown  2017-08-18-%EB%B0%95%EC%8A%A4%EC%95%A4%EC%9C%84%EC%8A%A4%EC%BB%A4%EB%B0%95%EC%9E%A5%EC%8B%9C%EB%8B%98-%EA%B0%95%EC%97%B0-%ED%9B%84%EA%B8%B0.markdown  2017-08-18-boxandwisker.markdown  2017-08-27-algorithm-study.markdown  2017-10-22-text-mining-study.markdown  2017-11-28-mlstudydecisiontree.markdown  2017-12-07-basicnn_1.markdown  2017-12-07-numpywithnn_1.markdown  2017-12-08-numpywithnn2.markdown  2017-12-08-numpywithnn_2.markdown  2017-12-10-numpywithnn_3.markdown  2017-12-15-numpywithnn_4.markdown  2018-01-02-deepmindnlp1.markdown  2018-01-13-numpywithnn_5.markdown  (+71 more)
_resume/: index.html  (+1 more)
(+698 files in other folders)
