[project]
name = "simonjisu-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.6.7",
    "mlx>=0.23.2",
    "numpy>=2.2.3",
    "seaborn>=0.13.2",
]
